# twenty-twenty-twenty

./: .gitignore  README.md  index.html  overlay.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  overlay.css  overlay.ts  styles.css
src-tauri/: Cargo.toml  convert.rs  tauri.conf.json  test_focus.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
