[package]
name = "twenty-twenty-twenty"
version = "1.0.0"
description = "20-20-20 Eye Rest Reminder — Protect your eyes with regular breaks"
authors = ["minhduc5a15"]
edition = "2021"

[lib]
name = "twenty_twenty_twenty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.22.2"
tauri-plugin-autostart = "2.5.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
